[package]
name = "electron-repl"
version = "0.1.1"
edition = "2021"
description = "A command-line REPL tool for Electron applications that allows you to execute JavaScript code in the main process."
license = "MIT"
repository = "https://github.com/t3tra-dev/electron-repl"
documentation = "https://github.com/t3tra-dev/electron-repl/blob/main/README.md"
homepage = "https://github.com/t3tra-dev/electron-repl"
readme = "README.md"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json"] }
rustyline = "15.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
tungstenite = "0.26.1"
